### 1.4.12
### 1.4.11
Fixed: Do not update child elements when renaming parent node (#9)
Added: Copy with childs feature (#10)
Update: Set the backend module icon via css

### 1.4.10
Update: Added more engl. translations
Update: Minor updates

### 1.4.9
Update: Support conditional filtering and count values in template

### 1.4.8
Fixed: Module logo not showing when internal cache is active (#6)
Update: Support for new CE Export (CE >= 1.4.0)

### 1.4.7
Update: Check if translations field has values to avoid foreach php error

### 1.4.6
Fixed: Sorting for filter values (#4)
Added: Find translation and set translations when rendering
Added: Fallback for metaWizard under Contao 3.2 (#5)
Update: Included blank option for tl_pct_customelement_attribute.tag_translations

### 1.4.5
Fixed: Errors when custom tables not exist
Update: New filter template structure
Update: Support for translations

### 1.4.4
Fixed: Set the default table in eval array
Fixed: Explode values array in filter class
Added: Generate the link url in the options array
Added: processWildcardValue Callback
Update: Option id now starts with ctrl_
Update: Updated the template variable to be compatible with the standard CC template vars
Update: Wrap the template in a div and use the selected key as boolean
Update: Pass the root field name to the tabletree widget

### 1.4.3
Update: Smaller sql field sizes
Update: General updates

### 1.4.2
Fixed: General bugfixes

### 1.4.1
Fixed: Use FIND_IN_SET in backend filter return because contao converts the placeholder to a full string
Added: Backend search support
Added: Fallback query settings

### 1.4.0
Added: CustomCatalog backend filtering support

### 1.3.0
Fixed: Fixed an issue with the filter
Update: New language keys for attribute label

### 1.2.0
Update: Filter the attribute selection down to tags only
Update: Update the parameter count of the renderAttribute callback to CE 1.2
Update: General updates

### 1.1.0